--- a/React_Portfolio-Project/src/components/navbar-section/NavbarSection.module.css
+++ b/React_Portfolio-Project/src/components/navbar-section/NavbarSection.module.css
@@ -18,7 +18,7 @@
 
 .navbar {
   height: var(--navbar-height);
-  background-color: var(--bg);
+  background-color: var(--card);
   border-bottom: 1px solid var(--border);
   transition: background-color var(--transition-speed) ease-in-out,
               border-color var(--transition-speed) ease-in-out;
